--- a/gb/16/10/26/n8432766.md
+++ b/gb/16/10/26/n8432766.md
@@ -1,26 +1,26 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ypqghs363/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ypqghs363/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ypqghs363/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ypqghs363/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ypqghs363/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ypqghs363/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ypqghs363/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ypqghs363/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ypqghs363/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ypqghs363/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ypqghs363/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ypqghs363/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ypqghs363/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ypqghs363/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ypqghs363/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ypqghs363/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ypqghs363/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ypqghs363/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ypqghs363/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ypqghs363/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ypqghs363/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ypqghs363/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ypqghs363/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ypqghs363/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ypqghs363/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ypqghs363/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ypqghs363/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ypqghs363/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ypqghs363/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ypqghs363/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ypqghs363/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ypqghs363/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ypqghs363/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ypqghs363/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ypqghs363/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ypqghs363/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ypqghs363/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ypqghs363/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ypqghs363/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ypqghs363/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ypqghs363/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ypqghs363/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ypqghs363/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ypqghs363/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ypqghs363/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ypqghs363/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ypqghs363/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>加拿大一护士涉嫌杀害八名护老院老人</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/10/can_caressant-600x400.jpg" />
 <h6>安省七名老人被害于伍德斯托克Caressant Care护老院。（加通社） 
 </h6>
 <hr>
-<p>【大纪元2016年10月26日讯】(大纪元记者周行多伦多报导）<ahref="https://github.com/ypqghs363/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>安省伍德斯托克镇（Woodstock）一名<ahref="https://github.com/ypqghs363/djy/blob/master/gb/tag/%E6%8A%A4%E5%A3%AB.md#1">护士</a>涉嫌于2007年至2014年间杀死8名护老院患者，于周二（10月25日）被控8项一级谋杀罪。</p>
-<figure id="attachment_8432791" style="width: 400px" class="wp-caption aligncenter"><img class=" wp-image-8432791" src="https://i.epochtimes.com/assets/uploads/2016/10/can_police_caressant.jpg" alt="安省省警周二于伍德斯托克镇举行记者会，公布案情调查进展。图为（从左至右）安省省警警探主管Dave Truax，伍德斯托克镇警察局局长William Renton和安省伦顿警局的警官William Merrylees出席当天的记者会。（加通社） " width="400" b="282" /><figcaption class="wp-caption-text">安省省警周二于伍德斯托克镇举行记者会，公布案情调查进展。图为（从左至右）安省省警警探主管Dave Truax，伍德斯托克镇警察局局长William Renton和安省伦敦警局的警官William Merrylees出席当天的记者会。（加通社）</figcaption></figure>
+<p>【大纪元2016年10月26日讯】(大纪元记者周行多伦多报导）<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>安省伍德斯托克镇（Woodstock）一名<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%8A%A4%E5%A3%AB.md#1">护士</a>涉嫌于2007年至2014年间杀死8名护老院患者，于周二（10月25日）被控8项一级谋杀罪。</p>
+<figure id="attachment_8432791" aria-describedby="caption-attachment-8432791" style="width: 400px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/10/can_police_caressant.jpg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-8432791" src="https://i.epochtimes.com/assets/uploads/2016/10/can_police_caressant.jpg" alt="安省省警周二于伍德斯托克镇举行记者会，公布案情调查进展。图为（从左至右）安省省警警探主管Dave Truax，伍德斯托克镇警察局局长William Renton和安省伦顿警局的警官William Merrylees出席当天的记者会。（加通社） " width="400" b="282" /></a><figcaption id="caption-attachment-8432791" class="wp-caption-text">安省省警周二于伍德斯托克镇举行记者会，公布案情调查进展。图为（从左至右）安省省警警探主管Dave Truax，伍德斯托克镇警察局局长William Renton和安省伦敦警局的警官William Merrylees出席当天的记者会。（加通社）</figcaption></figure>
 <p>被告是49岁的怀特劳芙（Elizabeth Tracey Mae Wettlaufer），她于周一晚被捕，于周二在位于伍德斯托克的安省法院首次出庭，目前仍被关押。</p>
-<figure id="attachment_8432795" style="width: 401px" class="wp-caption aligncenter"><img class=" wp-image-8432795" src="https://i.epochtimes.com/assets/uploads/2016/10/nurse.jpg" alt="49岁的被告怀特劳芙被控一级谋杀。（加通社） " width="401" b="225" /><figcaption class="wp-caption-text">49岁的被告怀特劳芙被控一级谋杀。（加通社）</figcaption></figure>
+<figure id="attachment_8432795" aria-describedby="caption-attachment-8432795" style="width: 401px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/10/nurse.jpg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-8432795" src="https://i.epochtimes.com/assets/uploads/2016/10/nurse.jpg" alt="49岁的被告怀特劳芙被控一级谋杀。（加通社） " width="401" b="225" /></a><figcaption id="caption-attachment-8432795" class="wp-caption-text">49岁的被告怀特劳芙被控一级谋杀。（加通社）</figcaption></figure>
 <p>安省省警当天上午在伍德斯托克镇发布记者会，公布警方的调查进展以及受害人名单。伍德斯托克镇位于安省伦敦市和汉密尔顿市之间，人口约37,000人。</p>
-<p>按警方信息，8名死者，其中5名女性，3名男性，他们的年龄在75岁至96岁之间，第一个死亡的<ahref="https://github.com/ypqghs363/djy/blob/master/gb/tag/%E8%80%81%E4%BA%BA.md#1">老人</a>是84岁的James Silcox，2007年8月17日死于伍德斯托克的Caressant Care护老院。最后一个死亡的是75岁的Arpad Horvath，2014年8月31日死于伦敦的Meadow Park护老院。有7名死者都是死于Caressant Care护老院。</p>
+<p>按警方信息，8名死者，其中5名女性，3名男性，他们的年龄在75岁至96岁之间，第一个死亡的<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E8%80%81%E4%BA%BA.md#1">老人</a>是84岁的James Silcox，2007年8月17日死于伍德斯托克的Caressant Care护老院。最后一个死亡的是75岁的Arpad Horvath，2014年8月31日死于伦敦的Meadow Park护老院。有7名死者都是死于Caressant Care护老院。</p>
 <p>警方没透露被害者的死因，也没有提及被告的杀人动机。省警主管社区服务的警长勒克特（David S. Rektor）对《大纪元》说，警方跟踪调查了相关的证据，对疑犯做出了适当的指控。</p>
 <p>一次指控8项谋杀的先例发生在2006年，但那次有5人同时被控。安省议会当天有议员就此案质疑政府监督问题后，省长韦恩将之形容为是“非常痛苦及悲剧性的”个案，但称因警方正在调查，不合适评论。</p>
 <p>省警称，对该案的调查始于今年9月29日，伍德斯托克警察局当时收到报料，有8人在2007年8月至2014年8月之间被杀。警方为此成立了跨区大案调查组，由省警刑侦督察Rob Hagerman主管。</p>
 <p><strong>被告是何许人？</strong></p>
-<p>怀特劳芙（Elizabeth Tracey Mae Wettlaufer）从1995年至2016年9月30日，是一名安省注册<ahref="https://github.com/ypqghs363/djy/blob/master/gb/tag/%E6%8A%A4%E5%A3%AB.md#1">护士</a>，她先受雇于有6家护理设施的Caressant Care护老院，然后受雇于位于伦敦的Meadow Park护老院。她在警方开始调查她的1天后辞职。</p>
+<p>怀特劳芙（Elizabeth Tracey Mae Wettlaufer）从1995年至2016年9月30日，是一名安省注册<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%8A%A4%E5%A3%AB.md#1">护士</a>，她先受雇于有6家护理设施的Caressant Care护老院，然后受雇于位于伦敦的Meadow Park护老院。她在警方开始调查她的1天后辞职。</p>
 <p>安省注册护士协会首席执行官格林斯普恩（Doris Grinspun）对此案的反应是：“可怕 ”，“最不寻常”，“非常罕见的例外”。</p>
 <p>怀特劳芙独自住在Woodstock镇的一栋公寓内，养有一条小狗。邻居称她为人谦逊友善。</p>
 <p>CBC称，怀特劳芙喜欢写诗，并找到了怀特劳芙于2015年9月28日在脸书上贴出的一段文字：“黑暗中我的声音呼唤我。在我选择光亮时，有人用手将我托起。一年前的今天，我醒来后没死。365天，干净、 清醒。”一年前的2014年8月31日，正是第8名受害者死于伦敦的护老院Meadow Park的时候。</p>
-<p><strong>护老院<ahref="https://github.com/ypqghs363/djy/blob/master/gb/tag/%E8%80%81%E4%BA%BA.md#1">老人</a>安全吗？</strong></p>
+<p><strong>护老院<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E8%80%81%E4%BA%BA.md#1">老人</a>安全吗？</strong></p>
 <p>安省省警认为，对该案的持续调查结果，未发现对病人或社区的安全有进一步的直接威胁。</p>
 <p>“一般来说，在安省的护老院是安全的。用一个人的行为去定义全省那么多护老院的护士，是不合适的。” 勒克特警长说： “但是，如果人们怀疑有任何类型的虐待行为，他们应该立即报警。”</p>
 <p>老年患者被杀的事件时有所闻。1997年，安省有一名医生被控谋杀一名濒临死亡的癌症患者，后来法官没判其有罪。今年7月，日本Sagamihara有1名26岁的前护理院职员，在他原来工作过的精神病护理院杀了19名患者后向警方自首。</p>
@@ -35,42 +35,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/6/11/7/n1512897.md#1">加卑诗省府6日起供应流感疫苗</a></li>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/7/6/3/n1731559.md#1">加照护完善 老伴在不在不怕没处去</a></li>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/8/3/26/n2058955.md#1">制造业受创  安省15亿预算应对</a></li>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/11/3/16/n3199431.md#1">刑法未明确虐老违法 华裔夫妇仍在押</a></li>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/12/7/3/n3626451.md#1">民调：民众盼药剂师职能扩大</a></li>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/13/5/24/n3878141.md#1">加国护理院老人被虐曝光 华裔老人仍不悔</a></li>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/14/5/9/n4151197.md#1">热心政务 中港台移民争当加国安省议员</a></li>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/16/8/11/n8190605.md#1">2016年加拿大杰出移民：从护士到“中侨”CEO</a></li>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/20/7/14/n12254218.md#1">7月17日起 安省进入重开第三阶段?</a></li>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/20/7/14/n12253858.md#1">多大学生宿舍 将推标准单人房及在线订餐</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/6/11/7/n1512897.md#1">加卑诗省府6日起供应流感疫苗</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/6/3/n1731559.md#1">加照护完善 老伴在不在不怕没处去</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/3/26/n2058955.md#1">制造业受创  安省15亿预算应对</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/3/16/n3199431.md#1">刑法未明确虐老违法 华裔夫妇仍在押</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/12/7/3/n3626451.md#1">民调：民众盼药剂师职能扩大</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/5/24/n3878141.md#1">加国护理院老人被虐曝光 华裔老人仍不悔</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/5/9/n4151197.md#1">热心政务 中港台移民争当加国安省议员</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/11/n8190605.md#1">2016年加拿大杰出移民：从护士到“中侨”CEO</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740984.md#1">安省大选提前投票开始 各党领袖加紧拉票</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740980.md#1">专家料安省汽油价格本周五再跌8分</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/30/n11225005.md#1" target="_blank">林辉：中共高规格接待蒙古独裁者背后的丑行</a></li><li><a href="https://github.com/ypqghs363/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/11/n11315892.md#1" target="_blank">河北一位电器维修师无悔的信念</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/1/n10014980.md#1" target="_blank">林辉：文革荒诞事 误损毛像引出大祸端</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/1/28/n3787603.md#1" target="_blank">钟延：从610副主任难逃610魔咒说起</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/20/7/12/n12250828.md#1">触目惊心 中储粮直属库再曝“硕鼠”事件</a></li>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/20/7/12/n12250255.md#1">分散三倍券领取人潮 延迟领券有优惠</a></li>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/20/7/12/n12251066.md#1">东莞海滩惊现上万猪脚和内脏 遍布海岸线</a></li>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/20/7/12/n12250760.md#1">班农：多名中国病毒专家出逃 真相会惊世人</a></li>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/20/7/12/n12251145.md#1">纳瓦罗：美将对微信和TikTok采取强有力行动</a></li>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/20/7/12/n12250927.md#1">中共广电总局新增20条禁令 杜汶泽发文嘲讽</a></li>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/20/7/11/n12248215.md#1">《不死军团》影评：特殊的天赋 也可能招来麻烦</a></li>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/20/7/12/n12250791.md#1">无惧恶法吁市民投票 叶德娴：港人心未死</a></li>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/20/7/12/n12251164.md#1">林志玲登台北电影奖 事先不透风获赞超暖心</a></li>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/20/7/12/n12250298.md#1">黄耀明何韵诗吁建黄色演艺圈 对抗港版国安法</a></li>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/20/5/20/n12122697.md#1">高鹗补红楼之年龄错谬及深度削弱</a></li>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/20/5/28/n12144105.md#1">【康熙大帝】毕生治河 天下安澜二十载</a></li>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/20/7/12/n12249941.md#1">中国第一坝三门峡大坝悲歌 为何坝成即祸出？</a></li>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/20/7/13/n12252460.md#1">海拔二千多公尺 世界最危险教堂盖在峭壁上</a></li>
-<li><a href="https://github.com/ypqghs363/djy/blob/master/gb/20/6/29/n12219238.md#1">世界仅存的马毛编织工艺</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740262.md#1">【秦鹏直播】不让戴口罩 李克强和习杠上了？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740815.md#1">【微视频】粮价涨多少？美国争论中国关税</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740248.md#1">【远见快评】美媒曝东航坠毁是人为 东航回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736831.md#1">11种营养和饮食 改善成人过动症</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ypqghs363/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ypqghs363/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/10/26/n8432766.htm">加拿大一护士涉嫌杀害八名护老院老人</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/10/26/n8432766.htm">加拿大一护士涉嫌杀害八名护老院老人</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ypqghs363/djy/blob/master/gb/16/10/26/n8432766.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ypqghs363/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypqghs363/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ypqghs363/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ypqghs363/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ypqghs363/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypqghs363/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ypqghs363/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypqghs363/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ypqghs363/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypqghs363/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ypqghs363/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypqghs363/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ypqghs363/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypqghs363/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ypqghs363/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypqghs363/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ypqghs363/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypqghs363/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ypqghs363/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypqghs363/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ypqghs363/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypqghs363/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ypqghs363/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypqghs363/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ypqghs363/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypqghs363/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ypqghs363/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypqghs363/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ypqghs363/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypqghs363/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ypqghs363/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypqghs363/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ypqghs363/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypqghs363/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ypqghs363/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypqghs363/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ypqghs363/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypqghs363/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ypqghs363/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypqghs363/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ypqghs363/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypqghs363/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ypqghs363/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypqghs363/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ypqghs363/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypqghs363/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ypqghs363/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypqghs363/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/16/10/26/n8432766.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
